# support-layer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.app  Dockerfile.llama  Makefile  README.md  agents.md  claude.json  development_plan.md  docker-compose.full.yml  docker-compose.gateway.yml  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.secrets.yml  docker-compose.vllm.yml  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: backup-restore-check.yml  eval-gate.yml  main.yml  pr.yml  zap-baseline.yml
.run/: FastApi.run.xml  fastapi_uvicorn.run.xml
app/: main.py
app/api/: internal.py  metrics.py  routes.py
app/core/: config.py  log_context.py  logging_config.py  telemetry.py
app/pipelines/: query.py
app/services/: embedding_service.py  qdrant_service.py  query_service.py
deploy/backup/: README.md  pg_backup.ps1  pg_restore_verify.ps1
deploy/security/: run-zap-baseline.ps1
docker/api-admin/: Dockerfile
docker/api-portal/: Dockerfile
docker/api-public/: Dockerfile
docker/grafana/dashboards/: phase5-overview.json  python-urls-overview.json
docker/prometheus/: alerts.yml  prometheus.yml
docker/promtail/: config.yml
docker/rag-python/: Dockerfile
docs/: development_plan.md  postman_collection.json  project_reference.md  web-apps.md
docs/references/design/: missing_references.md
docs/roadmap/: business-model.md  competitors.md  cross-cutting.md  index.md  overview.md  phase-0.md  phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-7b.md  phase-8.md  phase-9.md
eval/: __init__.py  eval_gate.py  generate.py  generate_dataset.py  run_eval.py  score.py  set_baseline.py
infrastructure/nginx/: gateway.conf
ingestion/: cli.py
ingestion/config/: filesystem.example.yaml
ingestion/pipelines/: components.py
k6/: README.md  config.js  run-all.ps1
k6/scenarios/: admin-dashboard.js  pdf-upload.js  widget-chat.js
platform/: Directory.Build.props  Platform.sln
platform/src/Api.Admin/: Api.Admin.csproj  Api.Admin.http  Program.cs  appsettings.json
platform/src/Api.Portal/: Api.Portal.csproj  (+3 more)
portal/: package-lock.json  package.json  vite.config.ts
portal/src/: App.tsx  index.css
secrets/: README.md
secrets/templates/: admin_jwt_key.txt.example  database_url.txt.example  internal_secret.txt.example  jwt_key.txt.example  postgres_password.txt.example  qdrant_api_key.txt.example
tests/: test_deepeval_eval.py  test_eval_gate.py  test_eval_generate_dataset.py  test_internal_ingest.py  test_internal_stream.py  test_metrics.py  test_run_eval.py  test_score_integrations.py  test_set_baseline.py  test_settings_secrets.py  test_tenant_isolation.py
widget/: index.html  package-lock.json  package.json  vite.config.ts
widget/src/: Widget.tsx  index.tsx  types.ts
(+213 files in other folders)
